# src/main/java/ru/diszexuf/streamlive/user/dto/UserAuthRequest.java
@@ -1,15 +1,0 @@
-package ru.diszexuf.streamlive.user.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Getter
-@Setter
-public class UserAuthRequest {
-  private String username;
-  private String password;
-}
