# src/main/java/ru/diszexuf/streamlive/user/dto/UserRegisterRequest.java
@@ -1,15 +1,0 @@
-package ru.diszexuf.streamlive.user.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-public class UserRegisterRequest
-{
-  private String username;
-  private String email;
-  private String password;
-}
