# src/main/java/ru/diszexuf/streamlive/user/dto/UserUpdateRequest.java
@@ -1,15 +1,0 @@
-package ru.diszexuf.streamlive.user.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-public class UserUpdateRequest {
-  private String username;
-  private String bio;
-}
